--- a/index.html
+++ b/index.html
@@ -13,7 +13,5 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <div><span class="badges badge--secondary badge--small">10% Off</span></div>
-  </body>
+  <body></body>
 </html>
