--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     />
   </head>
   <body>
-    <button type="submit" class="btn btn--outline">Get Started</button>
+    <input type="text" class="inputs" placeholder="Enter domain name here.." />
   </body>
 </html>
