--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     />
   </head>
   <body>
-    <input type="text" class="inputs" placeholder="Enter domain name here.." />
+    <div class="input-group">
+      <input
+        type="text"
+        class="inputs"
+        placeholder="Enter domain name here.."
+      />
+      <button type="submit" class="btn btn--accent">Search</button>
+    </div>
   </body>
 </html>
