--- a/index.html
+++ b/index.html
@@ -14,13 +14,22 @@
     />
   </head>
   <body>
-    <div class="input-group">
-      <input
-        type="text"
-        class="inputs"
-        placeholder="Enter domain name here.."
-      />
-      <button type="submit" class="btn btn--accent">Search</button>
-    </div>
+    <blockquote class="quotes">
+      <p class="quote__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus,
+        suscipit vero. Similique quidem neque hic nihil sed beatae minima nam?
+      </p>
+      <footer>
+        <span class="media__image">
+          <svg class="icon icon--primary">
+            <use xlink:href="images/sprite.svg#line"></use>
+          </svg>
+        </span>
+        <span class="media__body">
+          <h3 class="media__title quote__author">Hrishikesh Dey</h3>
+          <p class="quote__org">Zolo Inc CEO</p>
+        </span>
+      </footer>
+    </blockquote>
   </body>
 </html>
