--- a/index.html
+++ b/index.html
@@ -14,22 +14,14 @@
     />
   </head>
   <body>
-    <blockquote class="quotes">
-      <p class="quote__text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus,
-        suscipit vero. Similique quidem neque hic nihil sed beatae minima nam?
-      </p>
-      <footer>
-        <span class="media__image">
-          <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#line"></use>
-          </svg>
-        </span>
-        <span class="media__body">
-          <h3 class="media__title quote__author">Hrishikesh Dey</h3>
-          <p class="quote__org">Zolo Inc CEO</p>
-        </span>
-      </footer>
-    </blockquote>
+    <div style="width: 30%; padding: 4rem">
+      <div class="card card--secondary">
+        <header class="card__header">Card Title</header>
+        <div class="card__body">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum,
+          assumenda?
+        </div>
+      </div>
+    </div>
   </body>
 </html>
