--- a/index.html
+++ b/index.html
@@ -14,19 +14,34 @@
     />
   </head>
   <body>
-    <div class="media">
-      <div class="media__image">
-        <svg class="icon icon--primary">
-          <use xlink:href="images/sprite.svg#snap"></use>
-        </svg>
-      </div>
-      <div class="media__body">
-        <h3 class="media__title">Easy Start & Managed Updates</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
-          quisquam, ex nostrum vero voluptates dicta excepturi vel perspiciatis
-          consequuntur ab.
-        </p>
+    <div class="card testimonial">
+      <div class="grid grid--1x2">
+        <div class="testimonial__image">
+          <img src="images/Testimonialx1.jpg" alt="The CEO of Zolo Inc." />
+          <span class="icon-container icon-container--accent">
+            <svg class="icon icon--white icon--small">
+              <use xlink:href="images/sprite.svg#quotes"></use>
+            </svg>
+          </span>
+        </div>
+        <blockquote class="quotes">
+          <p class="quote__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus, suscipit vero. Similique quidem neque hic nihil sed
+            beatae minima nam?
+          </p>
+          <footer>
+            <span class="media__image__positioning">
+              <svg class="icon icon--primary">
+                <use xlink:href="images/sprite.svg#line"></use>
+              </svg>
+            </span>
+            <span class="media__body__positioning">
+              <h3 class="media__title quote__author">Hrishikesh Dey</h3>
+              <p class="quote__org">Zolo Inc CEO</p>
+            </span>
+          </footer>
+        </blockquote>
       </div>
     </div>
   </body>
