--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/d77d4ff939.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <div class="callout callout--primary">
-      <div class="grid grid--1x2">
-        <div class="callout__content">
-          <h2>Ready to get Started?</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni eum
-            accusantium corporis itaque ipsum iusto corrupti quibusdam
-            consectetur quos suscipit.
-          </p>
-        </div>
-        <a href="#" class="btn btn--secondary btn--secondary-two"
-          >Get Started</a
-        >
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h3>Item 1</h3>
+        <span class="collapsible__chevron">
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </span>
+      </header>
+      <div class="collapsible__content">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, quia?
       </div>
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
