Build Hero Section

--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
     ></script>
   </head>
   <body>
-    <div class="collapsible collapsible--expanded">
-      <header class="collapsible__header">
-        <h3>Item 1</h3>
-        <span class="collapsible__chevron">
-          <i class="fa-solid fa-circle-chevron-down"></i>
-        </span>
-      </header>
-      <div class="collapsible__content">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, quia?
+    <section class="block block--dark block--skewed-left hero">
+      <div class="container grid grid--1x2">
+        <header class="block__header hero__content">
+          <h1 class="block__heading">Cloud Hosting for Pros</h1>
+          <p class="hero__tagline">
+            Deploy your websites in less than 60 seconds.
+          </p>
+          <a href="" class="btn btn--accent btn--stretched">Get Started</a>
+        </header>
+        <img class="hero__image" src="images/banner.png" alt="" />
       </div>
-    </div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
