--- a/index.html
+++ b/index.html
@@ -18,17 +18,36 @@
     ></script>
   </head>
   <body>
-    <section class="block block--dark block--skewed-left hero">
-      <div class="container grid grid--1x2">
-        <header class="block__header hero__content">
-          <h1 class="block__heading">Cloud Hosting for Pros</h1>
-          <p class="hero__tagline">
-            Deploy your websites in less than 60 seconds.
-          </p>
-          <a href="" class="btn btn--accent btn--stretched">Get Started</a>
-        </header>
-        <img class="hero__image" src="images/banner.png" alt="" />
+    <section class="block container block--domain">
+      <header class="block__header">
+        <h2>The Web hosting starting per month</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam cumque
+          qui soluta eaque dolore repudiandae.
+        </p>
+      </header>
+      <div class="input-group">
+        <input
+          type="text"
+          class="inputs"
+          placeholder="Enter domain name here.."
+        />
+
+        <button type="submit" class="btn btn--accent">
+          <svg class="icon icon--white">
+            <use xlink:href="images/sprite.svg#search"></use>
+          </svg>
+          Search
+        </button>
       </div>
+      <ul class="lists block--domain__prices">
+        <li><span class="badges badge--secondary">.com $9</span></li>
+        <li>.sg $10</li>
+        <li>.space $11</li>
+        <li>.info $14</li>
+        <li>.net $10</li>
+        <li>.xyz $10</li>
+      </ul>
     </section>
     <script src="js/main.js"></script>
   </body>
