--- a/index.html
+++ b/index.html
@@ -17,104 +17,84 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  
-    <section class="block container">
+
+  <body>
+    <section class="block block--dark block--skewed-right block-showcase">
       <header class="block__header">
-        <h2>Host On the Cloud to keep growing</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, possimus.</p>
+        <h2>User-friendly Control Panel</h2>
       </header>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#easy"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Super Easy to use</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui et quam
-            accusantium aperiam aliquid exercitationem iure praesentium corrupti
-            cum tenetur.
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <picture>
+      <div class="container grid grid--1x2">
+        <picture class="block-showcase__image">
           <source
             type="image/webp"
-            srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
+            srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x"
           />
-          <img class="feature__image" src="images/easy@2x.jpg" alt="" />
-        </picture>
-      </article>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#computer"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Simply fast websites</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui et quam
-            accusantium aperiam aliquid exercitationem iure praesentium corrupti
-            cum tenetur.
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <picture>
           <source
-            type="image/webp"
-            srcset="images/fast.webp 1x, images/fast@2x.webp"
+            type="image/png"
+            srcset="images/ipad.png 1x, images/ipad@2x.png 2x"
           />
-          <img class="feature__image" src="images/fast@2x.jpg" alt="" />
+          <img src="images/ipad.png" alt="" />
         </picture>
-      </article>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#settings"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">WordPress made easy</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui et quam
-            accusantium aperiam aliquid exercitationem iure praesentium corrupti
-            cum tenetur.
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <picture>
-          <source
-            type="image/webp"
-            srcset="images/fast.webp, 1x images/fast@2x.webp 2x"
-          />
-          <img class="feature__image" src="images/fast@2x.jpg" alt="" />
-        </picture>
-      </article>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#clock"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Super Easy to use</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui et quam
-            accusantium aperiam aliquid exercitationem iure praesentium corrupti
-            cum tenetur.
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <picture>
-          <source
-            type="image/webp"
-            srcset="images/support.webp 1x, images/support@2x.webp"
-          />
-          <img class="feature__image" src="images/support@2x.jpg" alt="" />
-        </picture>
-      </article>
+        <ul class="lists">
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprite.svg#clock"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="block-showcase__media__title">
+                  Easy Start & Managed Updates
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam, ex nostrum vero voluptates dicta excepturi
+                  vel perspiciatis consequuntur ab.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprite.svg#growth"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="block-showcase__media__title">
+                  Staging, GIT & WP-CLI
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam, ex nostrum vero voluptates dicta excepturi
+                  vel perspiciatis consequuntur ab.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprite.svg#wordpress"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="block-showcase__media__title">
+                  Dynamic Caching & More
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam, ex nostrum vero voluptates dicta excepturi
+                  vel perspiciatis consequuntur ab.
+                </p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <script src="js/main.js"></script>
