--- a/index.html
+++ b/index.html
@@ -18,44 +18,85 @@
     ></script>
   </head>
   <body>
-    <section class="block">
-      <header class="block__header">
-        <h2>About Our CEO</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, sint!
-        </p>
-      </header>
-      <div class="card testimonial">
-        <div class="grid block-testimonial__grid--1x2">
-          <div class="testimonial__image">
-            <img src="images/Testimonialx1.jpg" alt="The CEO of Zolo Inc." />
-            <span class="icon-container icon-container--accent">
-              <svg class="icon icon--white icon--small">
-                <use xlink:href="images/sprite.svg#quotes"></use>
-              </svg>
+    <footer class="block block--dark footer">
+      <div class="container grid footer__sections">
+        <section class="collapsible collapsible--expanded footer__section">
+          <header class="collapsible__header">
+            <h3 class="collapsible__heading footer__heading">Product</h3>
+            <span class="collapsible__chevron">
+              <i class="fa-solid fa-circle-chevron-down"></i>
             </span>
+          </header>
+          <div class="collapsible__content">
+            <ul class="lists">
+              <li><a href="#">WordPress Hosting</a></li>
+              <li><a href="#">Automated WordPress</a></li>
+              <li><a href="#">Migration</a></li>
+              <li><a href="#">Domain Names</a></li>
+              <li><a href="#">Monthly Web Hosting</a></li>
+            </ul>
           </div>
-          <blockquote class="quotes">
-            <p class="quote__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Necessitatibus, suscipit vero. Similique quidem neque hic nihil
-              sed beatae minima nam?
-            </p>
-            <footer>
-              <span class="media__image__positioning">
-                <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#line"></use>
-                </svg>
-              </span>
-              <span class="media__body__positioning">
-                <h3 class="media__title quote__author">Hrishikesh Dey</h3>
-                <p class="quote__org">Zolo Inc CEO</p>
-              </span>
-            </footer>
-          </blockquote>
-        </div>
+        </section>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h3 class="collapsible__heading footer__heading">Comapany</h3>
+            <span class="collapsible__chevron">
+              <i class="fa-solid fa-circle-chevron-down"></i>
+            </span>
+          </header>
+          <div class="collapsible__content">
+            <ul class="lists">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Affiliates</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Career</a></li>
+              <li><a href="#">Community</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Green Hosting</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h3 class="collapsible__heading footer__heading">Support</h3>
+            <span class="collapsible__chevron">
+              <i class="fa-solid fa-circle-chevron-down"></i>
+            </span>
+          </header>
+          <div class="collapsible__content">
+            <ul class="lists">
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Knowledge Base</a></li>
+              <li><a href="#">Forums</a></li>
+              <li><a href="#">System Status</a></li>
+              <li><a href="#">DreamCompute</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h3 class="collapsible__heading footer__heading">Contact Me</h3>
+            <span class="collapsible__chevron">
+              <i class="fa-solid fa-circle-chevron-down"></i>
+            </span>
+          </header>
+          <div class="collapsible__content">
+            <ul class="lists">
+              <li><a href="#">WordPress Hosting</a></li>
+              <li><a href="#">Free Automated WordPress</a></li>
+              <li><a href="#">Migration</a></li>
+              <li><a href="#">Domain Names</a></li>
+              <li><a href="#">Monthly Web Hosting</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="footer__brand">
+          <img src="/images/logo.svg" alt="logo" />
+          <p class="footer__copyright">Copyright 2020 Moshify - Zolo Inc</p>
+        </section>
       </div>
-    </section>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
