--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
       <div class="card testimonial" data-aos="flip-up">
         <div class="grid block-testimonial__grid--1x2">
           <div class="testimonial__image">
-            <img src="images/Testimonialx1.jpg" alt="The CEO of Zolo Inc." />
+            <img src="images/Testimonial-main.jpg" alt="The CEO of Zolo Inc." />
             <span class="icon-container icon-container--accent">
               <svg class="icon icon--white icon--small">
                 <use xlink:href="images/sprite.svg#quotes"></use>
@@ -363,6 +363,23 @@
               </span>
             </footer>
           </blockquote>
+        </div>
+      </div>
+    </section>
+    <section class="callout--position">
+      <div class="callout callout--primary">
+        <div class="grid grid--1x2">
+          <div class="callout__content">
+            <h2>Ready to get Started?</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni
+              eum accusantium corporis itaque ipsum iusto corrupti quibusdam
+              consectetur quos suscipit.
+            </p>
+          </div>
+          <a href="#" class="btn btn--secondary btn--secondary-two"
+            >Get Started</a
+          >
         </div>
       </div>
     </section>
