Extended changes on call-out

--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@
           <div class="callout__content">
             <h2>Ready to get Started?</h2>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni
-              eum accusantium corporis itaque ipsum iusto corrupti quibusdam
-              consectetur quos suscipit.
+              Get Started with all new features on the internet at your own pace
+              and blaze. Go live right at your home and experience internet like
+              never before.
             </p>
           </div>
           <a href="#" class="btn btn--secondary btn--secondary-two"
