Plan Changes updated

--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
         <div class="plan">
           <div class="card card--secondary" data-aos="slide-right">
             <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
+              <h3 class="plan__name">Entry Pack</h3>
+              <span class="plan__price">$9</span>
               <span class="plan__billing-cycle">/month</span>
-              <span class="badges badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description">East start on the cloud</span>
+              <span class="badges badge--secondary badge--small">15% OFF</span>
+              <span class="plan__description">Easy start on the cloud</span>
             </header>
             <div class="card__body">
               <ul class="list list--tick">
                 <li class="list__item">Unlimited Websites</li>
                 <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Sotrage</li>
+                <li class="list__item">100 GB SSD Storage</li>
                 <li class="list__item">3 GB RAM</li>
               </ul>
               <button class="btn btn--outline btn--block btn--plan">
@@ -110,18 +110,18 @@
         <div class="plan plan--popular">
           <div class="card card--primary">
             <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
+              <h3 class="plan__name">Proffesional Pack</h3>
               <span class="plan__price">$14</span>
               <span class="plan__billing-cycle">/month</span>
               <span class="badges badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description">East start on the cloud</span>
+              <span class="plan__description">Build your own space</span>
             </header>
             <div class="card__body">
               <ul class="list list--tick">
                 <li class="list__item">Unlimited Websites</li>
                 <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Sotrage</li>
-                <li class="list__item">3 GB RAM</li>
+                <li class="list__item">500 GB SSD Storage</li>
+                <li class="list__item">10 GB RAM</li>
               </ul>
               <button class="btn btn--outline btn--block btn--plan">
                 Buy Now
@@ -132,18 +132,18 @@
         <div class="plan">
           <div class="card card--secondary" data-aos="slide-left">
             <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
+              <h3 class="plan__name">Learner pack</h3>
+              <span class="plan__price">$12</span>
               <span class="plan__billing-cycle">/month</span>
-              <span class="badges badge--secondary badge--small">10% OFF</span>
+              <span class="badges badge--secondary badge--small">13% OFF</span>
               <span class="plan__description">East start on the cloud</span>
             </header>
             <div class="card__body">
               <ul class="list list--tick">
                 <li class="list__item">Unlimited Websites</li>
                 <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Sotrage</li>
-                <li class="list__item">3 GB RAM</li>
+                <li class="list__item">300 GB SSD Storage</li>
+                <li class="list__item">6 GB RAM</li>
               </ul>
               <button class="btn btn--outline btn--block btn--plan">
                 Buy Now
